# take_ref

./: Cargo.toml  README.md
src/: lib.rs  take_ref.rs  take_slice.rs  take_string.rs
