[package]
name = "take_ref"
version = "0.2.0"
authors = ["Mitchell Keith Bloch <bazald@gmail.com>"]
description = "TakeRef, TakeSlice, and TakeString traits enable treating references/slices and values interchangeably. They can be treated as references/slices. And you can take ownership of the value within with a clone performed only as needed."
readme = "README.md"
edition = "2018"
repository = "https://github.com/bazald/take_ref/"
license = "MPL-2.0"
keywords = ["trait", "performance", "pattern", "argument", "generic"]
categories = ["memory-management", "rust-patterns"]

[features]
default = ["use_std"]
use_std = []

[dependencies]
